# everlog

./: .gitignore  APPIFICATION.md  ARCHITECTURE.md  DESIGN.md  EVERLOG_CHANGES_2026-02-04.md  EXCLUSIONS.md  README.md  SETUP_NOTES.md  pyproject.toml  requirements-macos-app.txt  requirements.txt  test_menubar.py
.experiments/exp_2026-02-06_gpt-5-nano_active-context/: README.md
.experiments/exp_2026-02-06_gpt-5-nano_segment03_active-context/: README.md
docs/: ARCHITECTURE.md  DESIGN.md  EXCLUSIONS.md  NOTION_SYNC.md  PIPLINE_3.md  PIPLINE_3_解説.md  PIPLINE_update.md  PRIVACY-CONTENTS.md  WEEKLY_REPORT_DESIGN.md
docs/archive/: 2026-02-05-capture-changes.md  APPIFICATION.md  EVERLOG_CHANGES_2026-02-04.md  PIPELINE_2.md  PIPLINE_1.md  PIPLINE_2_解説.md  SETUP_NOTES.md
everlog/: __init__.py  apple.py  capture.py  cli.py  collect.py  config.py  daily_runner.py  display.py  enrich.py  exclusions.py  jsonl.py  launchd.py  llm.py  menubar.py  notion_sync.py  ocr.py  paths.py  redact.py  safety.py  segments.py  summarize.py  timeutil.py  weekly.py
everytimecapture/: __init__.py  apple.py  capture.py  cli.py  collect.py  config.py  enrich.py  exclusions.py  jsonl.py  launchd.py  llm.py  menubar.py  ocr.py  paths.py  redact.py  segments.py  summarize.py  timeutil.py
experiments/exp_2026-02-06_gpt-5-nano_active-context/: run_pipeline.py
experiments/exp_2026-02-06_gpt-5-nano_raw/: README.md  run_pipeline.py
macos_app/: Everlog.icns  EverlogApp.py  EverytimeCapture.py  README.md  build_capture_app.sh  create_icns.sh  setup.py
tests/: test_segments.py
(+19 files in other folders)
